# lst_rooftype_material

./: delta_roofs_raster.qml  delta_roofs_vector.qml  green_roof_scenario.py  lst_20240626.tif  lst_20240720.tif  lst_20240813.tif  lst_20250614.tif  lst_20250622.tif  lst_29062019.tif  lst_check.qgz  lst_lvl2.py  mean_lst_per_roof.py  pyproject.toml  readme.md  roof_change.py
LC08_L2SP_196023_20240813_20240822_02_T1/: LC08_L2SP_196023_20240813_20240822_02_T1_ANG.txt  LC08_L2SP_196023_20240813_20240822_02_T1_MTL.json  LC08_L2SP_196023_20240813_20240822_02_T1_MTL.txt  LC08_L2SP_196023_20240813_20240822_02_T1_QA_PIXEL.TIF  LC08_L2SP_196023_20240813_20240822_02_T1_QA_RADSAT.TIF  LC08_L2SP_196023_20240813_20240822_02_T1_SR_B5.TIF.aux.xml  LC08_L2SP_196023_20240813_20240822_02_T1_SR_stac.json  LC08_L2SP_196023_20240813_20240822_02_T1_ST_B10.TIF.aux.xml  LC08_L2SP_196023_20240813_20240822_02_T1_ST_stac.json
data/: bremen_building_footprint.gpkg  bunker_hamburg.gpkg  hamburg_boundary.gpkg  hamburg_green_roofs.gpkg  hamburg_green_roofs_with_params.gpkg  hamburg_osm_building_footprints.gpkg  lst_bremen.tif  lst_bremen.tif.aux.xml  lst_hamburg.tif.aux.xml
other code/: analyse_greening_results.py  calculate_avg_green_roof_param.py  compare_bunker.py  delta_mean.py  lst_lvl2.py  merge_geojson_osm.py
results/: _lst_join_provenance.txt  lst_20250621.tif
results_greening/: _greening_provenance.txt  baseline_pred_LST.tif  delta_LST.tif  delta_LST.tif.aux.xml  roof_fraction.tif  scenario_pred_LST.tif  scenario_pred_LST.tif.aux.xml
results_greening_0.4/: _greening_provenance.txt  (+3 more)
(+189 files in other folders)
